--- a/astro/src/renderer/src/assets/index.css
+++ b/astro/src/renderer/src/assets/index.css
@@ -15,7 +15,7 @@
 
     @apply bg-transparent;
 
-    @apply font-mono antialiased text-white;
+    @apply font-mono antialiased text-[#FEFFFE];
 
     @apply overflow-hidden;
   }
